# AEseq2seq

./: .gitignore  ArchiveII-families.ipynb  environment.yml  execute_Unet.sh  execute_e1_progressive_selection.sh  execute_kfold.sh  execute_progressive_selection.sh  fold_it.sh  fold_it_inter_fam.sh  fold_it_models_ablation.sh  fold_it_paper.sh  global_config.json  mlflow.db  mlruns.db  model_summary.txt  plain_latents.sh  pyproject.toml  seq2seq_builder.ipynb  test.ipynb  testing.ipynb  train_config.json
build_test/build_AE_seq2seq.csv/: train.csv  valid.csv
config/: global.json  test.json  train.json
metric_analysis/: dbeaver-workspace.properties  sqlite3_extract.ipynb  train_analysis.ipynb
metric_analysis/.metadata/: dbeaver-instance.properties  dbeaver-workspace.properties
metric_analysis/AEseq2seq/: .project
metric_analysis/queries/: .project
metric_analysis/test/: arc_latent_dim-train_loss.csv  plain-latents16to64-valid-barplot.csv  plain-latents16to64-valid-diff.csv  plain-latents8to20-valid-loss.csv  runs.csv
results/UNet-k3-filters-4-8-200e-stride-21/: train_log.csv  weights.pmt
results/UNet-k3-filters-4-8-200e-stride-22/: test.csv  train_log.csv  weights.pmt
results/UNet-k3-filters-4-8-stride-21/: test.csv  weights.pmt
results/UNet-k3-filters-4-8-stride-22/: train_log.csv  weights.pmt
results/UNet-k5-filters-4-8-stride-21/: weights.pmt
results/UNet-k5-filters-4-8-stride-22/: train_log.csv  weights.pmt
results/UNet-k5-filters-4-8-stride-24/: test.csv  weights.pmt
results/UNet-kernel3-stride-11/: train_log.csv
scripts/: test_w_swap.sh
(+4533 files in other folders)
