[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seq2seq"
version = "0.1.0"
description = "Paquete para modelos seq2seq"
authors = [
    {name = "Guillermo Kulemeyer", email = "gkulemeyer@sinc.unl.edu.ar"}
]
license = {text = "MIT"}
dependencies = [
    "torch==2.1.0",
    "torch-cuda==12.1",
    "pandas==2.0.2",
    "numpy==1.24.2",
    "scikit-learn==1.2.1",
    "tqdm==4.64.1",
    "mlflow",
    "lightning"
]
python-requires = ">=3.9"
readme = "README.md"

[project.urls]
homepage = "https://github.com/Gisch97"
repository = "https://github.com/Gisch97/AEseq2seq"

[project.scripts]
S2S = "seq2seq:main"